# prod-vita-display-control-upgraded

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  nventConfig.h.in  qml.qrc
doxydocs/: api_doxy.cpp  gpio_doxy.cpp  gui_doxy.cpp  icon_doxy.cpp  logger_doxy.cpp  mainpage.md  models_doxy.cpp  mystyle.css  objects_doxy.cpp  pages_doxy.cpp  src_doxy.cpp  styling_doxy.cpp  warnings_doxy.cpp
qml/: HomeWindow.qml  Series.qml
qml/CustomObjects/: AdjustmentKeypad.qml  AutomaticSwitch.qml  CalibrateButton.qml  CalibrationOptionsButton.qml  CancelButton.qml  CheckListAlarm.qml  CheckListItem.qml  ContinueButton.qml  DateDayPad.qml  DateFebruaryDayPad.qml  DateFebruaryLeapDayPad.qml  DateMonthPad.qml  DateOtherDayPad.qml  DatePad.qml  DateYearPad.qml  DaylightSwitch.qml  DialButton.qml  DialDisplay.qml  DialDisplayMini.qml  EndTidalButton.qml  GenericDial.qml  GenericDialMini.qml  Graph.qml  HamburgerButton.qml  HamburgerMenu.qml  HelpIcon.qml  HelpIconLabeled.qml  HumidityIcon.qml  IncorrectPassCode.qml  Keyboard.qml  KeypadButton.qml  LineButton.qml  MenuButton.qml  ModeSettingDial.qml  ModeSettingKeypad.qml  ModeSwitch.qml  ModeSwitchConfirm.qml  NumberButton.qml  OxygenButton.qml  PassCodeKeypad.qml  (+23 more)
qml/CustomObjects/ContactKeyboard/: ContactKeyboardButton.qml  ContactKeyboardLayout.qml  GeneralContactKeyboard.qml  GeneralContactKeypad.qml
qml/CustomObjects/Keyboard/: KeyboardButton.qml  KeyboardLayout.qml  MachineKeyboardButton.qml  MachineKeyboardLayout.qml  SerialNumberKeyboardLayout.qml
qml/Pages/: ConfirmImplementPreset.qml  ContinueShutdown.qml  DehumidificationChecklist.qml  DehumidificationDisconnection.qml  DehumidificationFailure.qml  DehumidificationSuccess.qml  DehumidifyingProgressPage.qml  EditPreset.qml  HelpBox.qml  HighSettingConfirmation.qml  InteractiveKnobPage.qml  JetActiveConfirmation.qml  PassCode.qml  PresetDial.qml  PresetKeypad.qml  PresetMaxPopup.qml  PresetNamePopup.qml  PresetsPage.qml  ScreenLockConfirmation.qml  ScreenLockOverlay.qml  ServicePage.qml  SettingDial.qml  SettingsPage.qml  SettingsProgressPage.qml  ShutdownConfirmation.qml  ShutdownProgressPage.qml  SingleJet.qml  StartUpProgressPage.qml  Troubleshoot.qml  numeric_ui.qml
qml/Pages/Humidity/: HumidityAdjustment.qml  HumidityKeypad.qml  HumiditySeparatedDial.qml  HumiditySeparatedKeypad.qml  HumidityUnifiedDial.qml
qml/Pages/Service/: Calibration.qml  CalibrationDrivingPressure.qml  CalibrationHelpBox.qml  CalibrationInletAir.qml  CalibrationInletO2.qml  CalibrationPIP.qml  CalibrationPreRegulators.qml  CalibrationSP.qml  ChangePasscode.qml  ComponentSerialUpdate.qml  Components.qml  ComponentsHoursReset.qml  ComponentsReplaced.qml  ContactPopup.qml  DatePopup.qml  Demo.qml  ExportLogs.qml  ExportSaveData.qml  FactorySettings.qml  MachinePopUp.qml  Maintenance.qml  O2Calibration.qml  PassCode.qml  PassCodeChange.qml  PassCodeConfirm.qml  SerialNumberPopUp.qml  ServiceLogs.qml  UpdateDate.qml  UpdateDateInstalled.qml  UpdateTime.qml  UpdateTimeZone.qml
qml/Pages/Settings/: About.qml  Brightness.qml  Calibration.qml  Disconnection.qml  ETCO2Dial.qml  ETCO2Settings.qml  JetConfiguration.qml  LaserO2.qml  PassCode.qml  PassCodeChange.qml  PassCodeConfirm.qml  StackingPressure.qml  Volume.qml  VolumeAndBrightness.qml
qml/Styles/: Strings.qml  Style.qml  qmldir
scripts/: configure-gpio.sh  configure-qtcreator.sh  imx6.cmake
src/: CMakeLists.txt  backend.cpp  backend.h  mock_api.cpp  mock_api.h  state_manager.cpp  state_manager.h
src/communication/: api.cpp  api.h  api_consts.h  devices.cpp  devices.h  message.cpp  message.h  message_queue.cpp  message_queue.h  serial.cpp  serial.h
src/gpio/: encoder.cpp  encoder.h  gpio.cpp  gpio.h  knob.cpp  knob.h  switch.cpp  switch.h
src/logger/: brightness_manager.cpp  brightness_manager.h  contact_manager.cpp  contact_manager.h  csv_manager.cpp  csv_manager.h  dpr_manager.cpp  dpr_manager.h  log_manager.cpp  log_manager.h  maintenance_manager.cpp  maintenance_manager.h  o2_cal_manager.cpp  o2_cal_manager.h  part_manager.cpp  part_manager.h  passcode_manager.cpp  passcode_manager.h  preset_manager.cpp  preset_manager.h  time_manager.cpp  time_manager.h  version_manager.cpp  version_manager.h  zero_manager.cpp  zero_manager.h
src/models/: QML_IDS.h  QML_Service_notifications.h  QML_notifications.h  QML_settings.h  hmi_buttons.h  measured.h  mode_settings.cpp  mode_settings.h  modes.h  pneumatic_settings.cpp  pneumatic_settings.h  sensors.h  settings.h  subsystems.h
src/warnings/: warning_manager.cpp  warning_manager.h  warnings.cpp  warnings.h
tests/: CMakeLists.txt  communication_tests.cpp  communication_tests.h  gpio_tests.cpp  gpio_tests.h  logging_tests.cpp  logging_tests.h  warnings.cpp  warnings.h
